authorizaton-policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booksapp
  labels:
    source: kubectl-apply
  annotations:
    linkerd.io/inject: enabled
