authorizaton-policy/app-authors.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: authors
    app.kubernetes.io/part-of: booksapp
    project: booksapp
    source: kubectl-apply
  name: authors
  namespace: booksapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors
      project: booksapp
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: authors
        app.kubernetes.io/part-of: booksapp
        project: booksapp
    spec:
      containers:
      - args:
        - prod:authors
        image: buoyantio/booksapp:v0.0.5
        name: service
        ports:
        - containerPort: 7001
          name: service
        readinessProbe:
          httpGet:
            path: /ping
            port: 7001
      dnsPolicy: ClusterFirst
      serviceAccountName: authors
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: authors
    app.kubernetes.io/part-of: booksapp
    project: booksapp
    source: kubectl-apply
  name: authors
  namespace: booksapp
spec:
  ports:
  - name: service
    port: 7001
  selector:
    app: authors
